mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  minReadySeconds: 45
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/currency-app-network: "true"
        io.kompose.service: mysql
    spec:
      containers:
      - env:
        - name: MYSQL_DATABASE
          value: currenydb
        - name: MYSQL_PASSWORD
          value: currency
        - name: MYSQL_ROOT_PASSWORD
          value: root
        - name: MYSQL_USER
          value: currency
        image: library/mysql:latest
        imagePullPolicy: Always
        name: mysql
        ports:
        - containerPort: 3306
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mysql-database-currency-volume
      restartPolicy: Always
      volumes:
      - name: mysql-database-currency-volume
        persistentVolumeClaim:
          claimName: mysql-database-currency-volume
