zipkin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: zipkin
  name: zipkin
spec:
  minReadySeconds: 45
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: zipkin
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.network/currency-app-network: "true"
        io.kompose.service: zipkin
    spec:
      containers:
      - image: openzipkin/zipkin:latest
        imagePullPolicy: Always
        name: zipkin
        ports:
        - containerPort: 9411
      restartPolicy: Always
