currencyconversionservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: currencyconversionservice
  name: currencyconversionservice
spec:
  type: LoadBalancer
  ports:
  - name: "8000"
    port: 8000
    targetPort: 8000
  selector:
    io.kompose.service: currencyconversionservice
