currencyexchangerateservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: currencyexchangerateservice
  name: currencyexchangerateservice
  namespace: default
spec:
  minReadySeconds: 45
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: currencyexchangerateservice
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        io.kompose.network/currency-app-network: "true"
        io.kompose.service: currencyexchangerateservice
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: currenydb
            - name: MYSQL_HOST
              value: mysql
            - name: MYSQL_PASSWORD
              value: currency
            - name: MYSQL_PORT
              value: "3306"
            - name: MYSQL_USERNAME
              value: currency
            - name: ZIPKIN_SERVICE_NAME
              value: zipkin
          image: adithilokhande/currencyexchangerateservice:0.0.1-SNAPSHOT
          imagePullPolicy: Always
          name: currencyexchangerateservice
          ports:
            - name: liveness-port
              containerPort: 8100
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 400m
              memory: 1024Mi
          readinessProbe:
            httpGet:
              port: liveness-port
              path: /health
            failureThreshold: 5
            periodSeconds: 10
            initialDelaySeconds: 60
          livenessProbe:
            httpGet:
              port: liveness-port
              path: /health
            failureThreshold: 5
            periodSeconds: 10
            initialDelaySeconds: 60
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: currencyexchangerateservice
  name: currencyexchangerateservice
  namespace: default
spec:
  type: LoadBalancer
  ports:
    - name: "8100"
      port: 8100
      targetPort: 8100
  selector:
    io.kompose.service: currencyexchangerateservice
  sessionAffinity: None
